<resources>
    <string name="app_name">WenaHub</string>
    <string name="action_settings">Settings</string>
    <string name="lecturer">Lecturer</string>
    <string name="venue">Venue</string>
    <string name="course_code">Course Code</string>
    <string name="course_title">Course Title</string>
    <string name="new_lecture">New Lecture</string>
    <string name="recording_started">Recording Started</string>
    <string name="convert_to_text">Convert To Text</string>
    <string name="listen_to_it_now">Listen To it Now</string>
    <string name="osoke_auditorium">Osoke Auditorium</string>
    <string name="introduction_to_business_mathematics">Introduction to Business Mathematics</string>
    <string name="mth_101">MTH 101</string>
    <string name="time">20 min</string>
    <string name="recording_stopped">Recording Stopped</string>
    <string name="loading">Text Loading...</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_home">Home</string>
</resources>
