<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.rudigo.android.mycampus.NewLecture">

    <android.support.v7.widget.Toolbar
        android:id="@+id/newlecture_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay" />


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:padding="8dp"
        android:textColorHint="#FFF">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/course_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:hint="@string/course_code"
            android:inputType="text"
            android:paddingTop="4dp"
            android:textAllCaps="true"
            android:textColor="#FFF"
            android:textColorHint="#FFF"
            android:textSize="23sp" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/course_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/course_title"
            android:inputType="text"
            android:paddingTop="8dp"
            android:textAllCaps="true"
            android:textSize="18sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/venue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/venue"
            android:inputType="text"
            android:paddingTop="8dp"
            android:textAllCaps="true"
            android:textSize="18sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/course_lecturer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/lecturer"
            android:inputType="text"
            android:paddingTop="8dp"
            android:textAllCaps="true"
            android:textSize="18sp" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/linMon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_DayOfWeek"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="Mon"
                android:textColor="#000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_alarmTimeMon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="Mon"
                android:textColor="#000"
                android:textSize="16sp"
                android:visibility="invisible" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linTues"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_Tue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="Tue"
                android:textColor="#000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_alarmTimeTue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="Mon"
                android:textColor="#000"
                android:textSize="16sp"
                android:visibility="invisible" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linWed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_wed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="Wed"
                android:textColor="#000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_alarmTimeWed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="#000"
                android:textSize="16sp"
                android:visibility="invisible"
                tools:text="Mon" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linThur"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_Thurs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="Thur"
                android:textColor="#000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_alarmTimeThur"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="Mon"
                android:textColor="#000"
                android:textSize="16sp"
                android:visibility="invisible" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linFri"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_Fri"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="Fri"
                android:textColor="#000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_alarmTimeFri"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="Mon"
                android:textColor="#000"
                android:textSize="16sp"
                android:visibility="invisible" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="60dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:text="Cancel" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:text="save" />

    </LinearLayout>

</LinearLayout>


